logic added DTO